Add manpage text for the RTSCTS option

--- a/wvdial.conf.5
+++ b/wvdial.conf.5
@@ -236,6 +236,9 @@ will happily keep dialling forever.
 The maximum time in seconds that
 .B wvdial
 will wait for a connection to be made. Default value is 60 seconds.
+.TP
+.I RTSCTS
+Whether to enable RTS/CTS hardware flow control.
 .PP
 The
 .BR wvdialconf (1)
